--- a/index.html
+++ b/index.html
@@ -4,7 +4,49 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/svg/PlayIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Spelling Game | Play Now</title>
+    <meta
+      name="description"
+      content="Learn english by playing"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="viewport"
+      content="initial-scale=1.0, width=device-width"
+      key="viewport"
+    />
+    <link rel="canonical" href="https://spellinggame.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="| Play Now"
+    />
+    <meta
+      property="og:image"
+      content="/img/spelling-game.png"
+    />
+    <meta property="og:site_name" content="Spelling Game" />
+    <meta property="og:url" content=" https://www.spellinggame.com" />
+    <meta
+      property="og:description"
+      content="Learn english by playing."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="| Play Now"
+    />
+    <meta
+      name="twitter:description"
+      content="Learn english by playing."
+    />
+    <meta
+      name="twitter:image:src"
+      content="/img/spelling-game.png"
+    />
+    <meta name="twitter:url" content="https://spellinggame.com/" />
+    <meta name="twitter:domain" content="spellinggame" />
+    <meta name="twitter:creator" content="Spelling Game" />
   </head>
   <body>
     <div id="root"></div>
